// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationWidget.vue calls buttons 1`] = `
{
  "click": [
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "focusin": [
    [
      FocusEvent {
        "isTrusted": true,
      },
    ],
    [
      FocusEvent {
        "isTrusted": true,
      },
    ],
  ],
  "focusout": [
    [
      FocusEvent {
        "isTrusted": true,
      },
    ],
  ],
  "mousedown": [
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseenter": [
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mousemove": [
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseover": [
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseup": [
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "next": [
    [],
  ],
  "pointerdown": [
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerenter": [
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointermove": [
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerover": [
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerup": [
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "previous": [
    [],
  ],
}
`;

exports[`PaginationWidget.vue calls buttons 2`] = `
[MockFunction] {
  "calls": [
    [
      "pagination-previous-button-clicked",
    ],
    [
      "pagination-next-button-clicked",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`PaginationWidget.vue renders nothing if no next or prev props provided 1`] = `
<div>
  <div
    class="pagination"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`PaginationWidget.vue renders pagination 1`] = `
<div>
  <div
    class="pagination"
  >
    <button
      class="medium rounded primary k-button"
      data-v-6bcbf05d=""
      type="button"
    >
      
      <!---->
      
      
       ‹ Previous 
      
      <!---->
    </button>
    <button
      class="medium rounded primary k-button"
      data-v-6bcbf05d=""
      type="button"
    >
      
      <!---->
      
      
       Next › 
      
      <!---->
    </button>
  </div>
</div>
`;
